fix spacing

--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -996,7 +996,7 @@ input.mobile-facets__checkbox {
     display: none;
   }
 
-  .no-js .facets-vertical .facets-wrapper--no-filter {
+  .no-js .facets-vertical .facets-wrapper--no-filters {
     display: block;
   }
 
@@ -1040,8 +1040,9 @@ input.mobile-facets__checkbox {
     margin-bottom: 1.5rem;
   }
 
-  .facets-vertical .facet-filters.sorting.no-js {
+  .no-js .facets-vertical .facet-filters.sorting {
     padding-left: 0;
+    flex-direction: column;
   }
 
   .facets-vertical .facet-checkbox input[type='checkbox'] {
@@ -1079,7 +1080,7 @@ input.mobile-facets__checkbox {
   }
 
   .facets-container-drawer .product-count {
-    margin-left: 3.5rem;
+    margin:0 0 0.5rem 3.5rem;
   }
 
   .facets-container-drawer .facets-pill {
